tests/ui/object-safety/object-safety-supertrait-mentions-Self.stderr
error[E0038]: the trait `Baz` cannot be made into an object
  --> $DIR/object-safety-supertrait-mentions-Self.rs:15:31
   |
LL | fn make_baz<T:Baz>(t: &T) -> &dyn Baz {
   |                               ^^^^^^^ `Baz` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/object-safety-supertrait-mentions-Self.rs:8:13
   |
LL | trait Baz : Bar<Self> {
   |       ---   ^^^^^^^^^ ...because it uses `Self` as a type parameter
   |       |
   |       this trait cannot be made into an object...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
